[package]
name = "exa"
version = "0.1.0"
authors = ["Travis Thieman <travis.thieman@gmail.com>"]
edition = "2018"

[[bin]]
name = "exa-standalone"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]
name = "exa"
path = "src/lib.rs"

[[bench]]
name = "exa_benchmark"
harness = false

[dependencies]
nom = "6.1.2"
regex = "1.5.4"
simple-error = "0.2.3"
itertools = "0.10.1"
fastrand = "1.4.1"
libretro-backend = "0.2.1"

[dev-dependencies]
criterion = "0.3"

[profile.release]
opt-level = 3
rpath = false
lto = true
debug-assertions = false
codegen-units = 1