[package]
name = "exa"
version = "0.1.0"
authors = ["Travis Thieman <travis.thieman@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]
name = "exa"
path = "src/lib.rs"

[[bench]]
name = "exa_benchmark"
harness = false

[dependencies]
nom = "6.1.2"
regex = "1.5.4"
simple-error = "0.2.3"
itertools = "0.10.1"
fastrand = "1.4.1"
libretro-sys = "0.1"
libc = "0.2"
image = "0.23.14"
miniz_oxide = "0.4.4"
fletcher = "0.1.0"

[dev-dependencies]
criterion = "0.3"

[features]
runtime_controls = []

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
rpath = false
lto = true
debug-assertions = false
codegen-units = 1